# taskfactory

./: .gitignore  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yaml
poetry_plugins/: pyproject.toml
poetry_plugins/poetry_plugins/: version.py
src/taskfactory/: __init__.py  cli.py  console.py  shell.py  task_group.py
tests/: test_cli.py  test_task_group.py
