[tool.poetry]
name = "taskfactory"
authors = ["Stefan Hoelzl"]
description = ""
license = "MIT"
version = "0.0.0"
packages = [
    { include = "taskfactory", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.6.1"
rich = "^12.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[tool.poetry.scripts]
tasks = 'taskfactory.cli:main'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
